## Process this file with automake to produce Makefile.in

pkgdata_DATA = \
	basic_c0.851	\
	os____e0.851	\
	basic_c0.853    \
	basic_c0.854    \
	caos__c0.854    \
	caos__e0.852    \
	caos__e0.853    \
	caos__e0.854	\
	m006.rom	\
	m012.rom	\
	m026.rom	\
	m027.rom	\
	m900.rom	\
	m901.rom	\
	floppy.rom

EXTRA_DIST = $(pkgdata_DATA)
