## Process this file with automake to produce Makefile.in

pkgdata_DATA = \
	basic_c0.851	\
	basic_c0.853    \
	basic_c0.854    \
	basic_c0.87     \
	caos__c0.854    \
	caos__e0.852    \
	caos__e0.853    \
	caos__e0.854	\
	os____f0.851	\
	idas__c0.851	\
	bitex_c0.851	\
	edas__c0.851	\
	zsid__c0.851	\
	r80___c0.851	\
	zm30__c0.851	\
	m006.rom	\
	m012.rom	\
	m026.rom	\
	m027.rom	\
	m900.rom	\
	m901.rom	\
	floppy.rom	\
	lc80__00.rom	\
	lc80__08.rom

EXTRA_DIST = $(pkgdata_DATA)
