## Process this file with automake to produce Makefile.in

pkgdata_DATA = \
	basic_c0.851	\
	basic_c0.853    \
	basic_c0.854    \
	basic_c0.87a    \
	basic_c0.87b    \
	caos__c0.854    \
	caos__e0.852    \
	caos__e0.853    \
	caos__e0.854	\
	os____f0.851	\
	os____f0.87b	\
	idas__c0.851	\
	bitex_c0.851	\
	edas__c0.851	\
	zsid__c0.851	\
	r80___c0.851	\
	zm30__c0.851	\
	cpmz9_c0.851	\
	192k__d2.851	\
	192k__d3.851	\
	192k__d5.851	\
	m006.rom	\
	m012.rom	\
	m026.rom	\
	m027.rom	\
	m900.rom	\
	m901.rom	\
	floppy.rom	\
	z1013_20.rom	\
	z1013_a2.rom	\
	z1013_rb.rom	\
	z1013_ul.rom	\
	z1013_bl.rom	\
	z1013_zg.rom	\
	k1505_00.rom	\
	k1505_80.rom	\
	k5651_40.rom	\
	k5651_60.rom	\
	poly_880.rom	\
	lc80__00.rom	\
	lc80__08.rom

EXTRA_DIST = $(pkgdata_DATA)
