## Process this file with automake to produce Makefile.in

confdir = $(pkgdatadir)/config

CONFIG_FILES = \
	default.conf \
	kc85-1.conf \
	kc85-2.conf \
	kc85-3.conf \
	kc85-4.conf \
	kc85-5.conf \
	kc87.conf \
	a5105.conf \
	c80.conf \
	kramermc.conf \
	lc80.conf \
	pcm.conf \
	poly880.conf \
	vcs80.conf \
	z1013.conf

conf_DATA = $(CONFIG_FILES)

EXTRA_DIST = $(CONFIG_FILES)
