## Process this file with automake to produce Makefile.in

IMAGES = \
	sys-a5105.jpg \
	sys-kc855.jpg \
	sys-kc85.jpg \
	sys-lc80.jpg \
	sys-poly880.jpg \
	sys-z1013.jpg \
	sys-z9001.jpg \
	window-audio.png \
	window-disk.png \
	window-module-kc85.png \
	window-module-z1013.png \
	window-module-z9001.png \
	window-tape.png \
	kcemu.png

docdir = $(pkgdatadir)/doc

doc_DATA = \
	kcemurc.sample \
	kcemu-help.xml \
	$(IMAGES)

EXTRA_DIST = $(pkgdata_DATA) kcemurc.sample kcemu-help.xml.in $(IMAGES)
