## Process this file with automake to produce Makefile.in

IMAGES = \
	sys-a5105.jpg \
	sys-kc855.jpg \
	sys-kc85.jpg \
	sys-lc80.jpg \
	sys-poly880.jpg \
	sys-z1013.jpg \
	sys-z9001.jpg \
	sys-xy4131.jpg \
	window-audio.png \
	window-colors.png \
	window-disk.png \
	window-module-kc85.png \
	window-module-z1013.png \
	window-module-z9001.png \
	window-tape.png \
	window-profile-1.png \
	window-profile-2.png \
	window-profile-3.png \
	window-profile-4.png \
	window-profile-5.png \
	window-savemem.png \
	window-select-profile.png \
	window-profile-1_small.png \
	window-profile-2_small.png \
	window-profile-3_small.png \
	window-profile-4_small.png \
	window-profile-5_small.png \
	window-savemem_small.png \
	window-select-profile_small.png \
	window-plotter-1.png \
	window-plotter-1_small.png \
	window-plotter-2.png \
	window-plotter-2_small.png \
	window-screenshot.png \
	window-video.png \
	window-keyboard-kc85.png \
	window-keyboard-kc85_small.png \
	window-keyboard-lc80.png \
	window-keyboard-poly880.png \
	window-keyboard-poly880_small.png \
	window-keyboard-z9001.png \
	window-keyboard-z9001_small.png \
	kcemu.png

docdir = $(pkgdatadir)/doc

doc_DATA = \
	kcemurc.sample \
	kcemu-help.xml \
	$(IMAGES)

EXTRA_DIST = $(pkgdata_DATA) kcemurc.sample kcemu-help.xml.in $(IMAGES)
