## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	convert.sh \
	5floppy_mount.svg \
	14_layer_visible.svg \
	blockdevice.svg \
	jabber_protocol.svg \
	kdat.svg \
	kuser.svg \
	player_eject.svg \
	player_end.svg \
	player_fwd.svg \
	player_pause.svg \
	player_play.svg \
	player_record.svg \
	player_rew.svg \
	player_start.svg \
	player_stop.svg \
	tux.svg \
	xedit.svg \
	xeyes.svg \
	xmms.svg \
	bar6.svg \
	kxkb.svg \
	kmplot.svg
