## Process this file with automake to produce Makefile.in

SUBDIRS = prefs kcnet kramermc muglerpc vcs80 c80

EXTRA_DIST = \
	cb.h		\
	ic.h		\
	kc.h		\
	ctc.h		\
	ctc1.h		\
	ctc3.h		\
	ctc6.h		\
	ctc8.h		\
	ctc9.h		\
	ctc_fdc.h	\
	pio_dio.h	\
	pio_vdip.h	\
	ctc_dio.h	\
	ctc_base.h	\
	cb_list.h	\
	daisy.h		\
	keyboard.h	\
	keyb0.h		\
	keyb0k.h	\
	keyb1.h		\
	keyb1k.h	\
	keyb3.h		\
	keyb3k.h	\
	keyb6.h		\
	keyb8.h		\
	keyb8k.h	\
	keyb9.h		\
	keyb9k.h	\
	keys.h		\
	memory.h	\
	memoryif.h	\
	memory0.h	\
	memory1.h	\
	memory2.h	\
	memory3.h	\
	memory4.h	\
	memory5.h	\
	memory6.h	\
	memory7.h	\
	memory8.h	\
	memory9.h	\
	pio.h		\
	pio0.h		\
	pio1.h		\
	pio2.h		\
	pio3.h		\
	pio4.h		\
	pio6.h		\
	pio8.h		\
	pio9.h		\
	ports.h		\
	ports0.h	\
	ports4.h	\
	ports6.h	\
	plotter.h	\
	sh_mem.h	\
	disk_io.h	\
	gdc.h		\
	vis.h		\
	svg.h		\
	gide.h		\
	vdip.h		\
	fdc.h		\
	fdc0s.h		\
	fdc4.h		\
	fdc7.h		\
	fdc9.h		\
	fdc_cmd.h	\
	floppy.h	\
	module.h	\
	mod_dio.h	\
	mod_vdip.h	\
	mod_ram.h	\
	mod_ram1.h	\
	mod_r16.h	\
	mod_r64.h	\
	mod_cpm.h	\
	mod_ram8.h	\
	mod_64k.h	\
	mod_128k.h	\
	mod_256k.h	\
	mod_512k.h	\
	mod_1m.h	\
	mod_4m.h	\
	mod_rom.h	\
	mod_urom.h	\
	mod_auto.h	\
	mod_rom1.h	\
	mod_romb.h	\
	mod_raf.h	\
	mod_192k.h	\
	mod_320k.h	\
	mod_ramf.h	\
	mod_fdc.h	\
	mod_gdc.h	\
	mod_rtc.h	\
	mod_disk.h	\
	mod_v24.h	\
	mod_js.h	\
	mod_4131.h	\
	mod_m052.h	\
	mod_segm.h	\
	mod_boot.h	\
	mod_list.h	\
	profile.h	\
	tape.h		\
	disk.h		\
	timer.h		\
	timer1.h	\
	timer3.h	\
	wav.h		\
	sound.h		\
	sound3.h	\
	sound8.h	\
	poly880.h	\
	z80.h		\
	z80_fdc.h	\
	romdi.h		\
	system.h	\
	memstream.h	\
	disass.h	\
	basicrun.h	\
	basicrun.asm
