## Process this file with automake to produce Makefile.in

kc85romdir = $(pkgdatadir)/roms/kc85

ROMS = \
	hc900.852 \
	caos__e0.852 \
	basic_c0.853 \
	caos__e0.853 \
	caos33.853 \
	caos34.853 \
	pi88_ge.853 \
	pi88_sw.853 \
	pi88_ws.853 \
	basic_c0.854 \
	caos__c0.854 \
	caos__e0.854 \
	caos41c.854 \
	caos41e.854 \
	basic_c0.855 \
	caos__c0.855 \
	caos__e0.855 \
	caos43c.855 \
	caos43e.855 \
	floppy20.rom \
	floppy31.rom \
	m006.rom \
	m012.rom \
	m026.rom \
	m027.rom \
	m900.rom \
	m901.rom

kc85rom_DATA = $(ROMS)

EXTRA_DIST = $(ROMS)
