## Process this file with automake to produce Makefile.in

z9001romdir = $(pkgdatadir)/roms/z9001

ROMS = \
	192k__d2.851 \
	192k__d3.851 \
	192k__d5.851 \
	basic_c0.851 \
	basic_c0.87a \
	basic_c0.87b \
	bitex_c0.851 \
	cpmz9_c0.851 \
	edas__c0.851 \
	idas__c0.851 \
	os____f0.851 \
	os____f0.87b \
	r80___c0.851 \
	rom_bank.851 \
	zm30__c0.851 \
	zsid__c0.851 \
	kcpascal.851 \
	mega_rom.851 \
	os_rb20.rom \
	os_rb21.rom

z9001rom_DATA = $(ROMS)

EXTRA_DIST = $(ROMS)
